force-app/main/default/objects/Purchase_History__c/Purchase_History__c.object-meta.xml
<CustomObject>
    <description>to capture the Opportunity via Integration</description>
    <label>Purchase History</label>
    <nameField>
        <displayFormat>PH-{000000}</displayFormat>
        <label>Purchase History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Historys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>