force-app/main/default/objects/Purchase_History__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Account Object</description>
    <inlineHelpText>Related Account</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Purchase Historys</relationshipLabel>
    <relationshipName>Purchase_Historys</relationshipName>
    <type>Lookup</type>
</CustomField>