force-app/main/default/objects/Purchase_History__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Contact Object</description>
    <inlineHelpText>Related Contact</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Purchase Historys</relationshipLabel>
    <relationshipName>Purchase_Historys</relationshipName>
    <type>Lookup</type>
</CustomField>