force-app/main/default/objects/Purchase_History__c/fields/Edition__c.field-meta.xml
<CustomField>
    <fullName>Edition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Edition Object</description>
    <inlineHelpText>Related Event Edition</inlineHelpText>
    <label>Edition</label>
    <referenceTo>Edition__c</referenceTo>
    <relationshipLabel>Purchase Historys</relationshipLabel>
    <relationshipName>Purchase_Historys</relationshipName>
    <type>Lookup</type>
</CustomField>