force-app/main/default/objects/Purchase_History__c/fields/Opportunity_Link__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Link__c</fullName>
    <formula>HYPERLINK( TEXT(Account__r.Legacy_CRM_Org_URL__c)+ Opportunity_ID__c  , &quot;Go to Opportunity Detail&quot; ,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Link</label>
    <type>Text</type>
</CustomField>