force-app/main/default/objects/Purchase_History__c/fields/Sales_Rep_ID__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_ID__c</fullName>
    <label>Sales Rep ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>