force-app/main/default/objects/Purchase_History__c/fields/Sales_Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Name__c</fullName>
    <label>Sales Rep Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>