force-app/main/default/objects/Purchase_History__c/fields/Source_Org__c.field-meta.xml
<CustomField>
    <fullName>Source_Org__c</fullName>
    <label>Source Org</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Legacy_CRM_Instance</valueSetName>
    </valueSet>
</CustomField>