force-app/main/default/objects/Purchase_History__c/listViews/All_Purchase_History.listView-meta.xml
<ListView>
    <fullName>All_Purchase_History</fullName>
    <columns>NAME</columns>
    <columns>Opportunity_Name__c</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Edition__c</columns>
    <columns>Amount__c</columns>
    <columns>Sales_Rep_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Source_Org__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Purchase History</label>
</ListView>